--- a/css/style.css
+++ b/css/style.css
@@ -348,3 +348,50 @@ body{
     font-size: 12px;
 }
 
+.container-album-recenti{
+    padding: 20px;
+}
+
+.recenti{
+    margin-bottom: 35px;
+}
+
+.generi-musicali{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 25px 10px;
+    
+}
+
+.item-generi{
+    color: var(--gray);
+}
+
+.row-album{
+    display: flex;
+    gap: 14px;
+}
+
+.col-6{
+    flex-basis: calc(100% / 6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.creato-per{
+    margin-bottom: 15px;
+}
+
+.piu-ascoltati{
+    margin-bottom: 15px;
+    color: var(--gray);
+}
+
+.circle-artist{
+    border-radius: 50%;
+}
